# bugbounty-mcp-server

./: .gitignore  Dockerfile  IMPLEMENTATION_TASKS.md  LICENSE  README.md  RUN_SCRIPT.md  SECURITY.md  USAGE.md  docker-compose.yml  docker-entrypoint.sh  docker.sh  env.example  install.sh  pyproject.toml  requirements-minimal.txt  requirements.txt  run.sh
.github/: copilot-instructions.md
bugbounty_mcp_server/: __init__.py  cli.py  config.py  server.py  utils.py
bugbounty_mcp_server/tools/: __init__.py  base.py  exploitation.py  network.py  osint.py  recon.py  reporting.py  scanning.py  vulnerability.py  webapp.py
issues/: 01-utils-validate-target.md  02-recon-api-integrations.md  03-webapp-security-testing.md  README.md
wordlists/: directory-list-2.3-medium.txt  subdomains-top1million-110000.txt
