[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugbounty-mcp-server"
version = "1.0.0"
description = "Comprehensive MCP server for bug bounty hunting and web application penetration testing"
authors = [{name = "Bug Bounty Hunter", email = "hunter@security.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "click>=8.1.0",
    "aiohttp>=3.8.0", 
    "requests>=2.28.0",
    "pydantic>=2.11.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
bugbounty-mcp = "bugbounty_mcp_server.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/bugbounty-mcp-server"
Repository = "https://github.com/yourusername/bugbounty-mcp-server"
Issues = "https://github.com/yourusername/bugbounty-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bugbounty_mcp_server*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
